[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
