[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bytes = "1.10.1"
lib = { path = "../lib" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[dev-dependencies]
proptest = "1.7.0"
